--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Fouad Komeiha
 #logo:
-description: PhD in Computer Science Interested in Cybersecurity and Machine Learning
+description: PhD in Computer Science, Semantic Web and Recommendation Systems.
+             Interested in Cybersecurity and Machine Learning.
 show_downloads: true
 theme: jekyll-theme-minimal
