--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Fouad Komeiha
 logo: /assets/logo/photo.jpeg
 description: |
-             PhD in Computer Science, Semantic Web and Recommendation Systems.
+             PhD in Computer Science, Semantic Web and Recommendation Systems.|
              Interested in Cybersecurity and Machine Learning.
 show_downloads: true
 theme: jekyll-theme-minimal
