--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Fouad Komeiha
 logo: /assets/logo/photo.jpeg
 description: PhD in Computer Science. Interested in Cybersecurity and Machine Learning.
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-minimal
