--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 title: Fouad Komeiha
 logo: /assets/logo/photo.jpeg
-description: PhD in Computer Science. Interested in Cybersecurity and Machine Learning.
+description: >
+  PhD in Computer Science, Recommendation Systems and the Semantic Web.
+  I'am Interested in Cybersecurity, Machine Learning, and Data.
 show_downloads: false
 theme: jekyll-theme-minimal
+
