--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Fouad Komeiha
 logo: /assets/logo/photo.jpeg
 description: >
   PhD in Computer Science, Recommendation Systems and the Semantic Web.
-  I'am Interested in Cybersecurity, Machine Learning, and Data.
+  I'm Interested in Cybersecurity, Machine Learning, and Data.
 show_downloads: false
 theme: jekyll-theme-minimal
 
