--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,5 @@ description: >
   I'm Interested in Cybersecurity, Machine Learning, and Data.
 show_downloads: false
 theme: jekyll-theme-minimal
+lang: en, fr
 
